Snap curvepoints dont work correct when another object is selected #35669

Closed
opened 2013-06-08 14:23:58 +02:00 by Paul Andruchiewicz · 5 comments

%%%--- Operating System, Graphics card ---
Windows 7 64 Bit, Gf 550Ti

- Blender version with error, and version that worked ---

tested on 2.67b and 2.66

- Short description of error ---

You have to go in edit mode of a curve and set the setup for snapping curvepoints to face. Then select in this mode another object with strg+rmb and after that try to put some curvepoints on to an object via strg+lmb. It doesn't work. Yo can only snap them by moving. And there is a secound problem: the new curve points are invisible and you only see the edges. Everything is the same with putting vertex points.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- Windows 7 64 Bit, Gf 550Ti - Blender version with error, and version that worked --- tested on 2.67b and 2.66 - Short description of error --- You have to go in edit mode of a curve and set the setup for snapping curvepoints to face. Then select in this mode another object with strg+rmb and after that try to put some curvepoints on to an object via strg+lmb. It doesn't work. Yo can only snap them by moving. And there is a secound problem: the new curve points are invisible and you only see the edges. Everything is the same with putting vertex points. - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Committed r57330. curves now snap to other objects when adding with Ctrl+Click.

You mention a second issue which I do not understand -
"the new curve points are invisible" --- could you show an image or blend file which has this problem?%%%

%%%Committed r57330. curves now snap to other objects when adding with Ctrl+Click. You mention a second issue which I do not understand - "the new curve points are invisible" --- could you show an image or blend file which has this problem?%%%

%%%ok added a picture and blendfile
(graka gf 550ti, driver: 310.90, blender 2.67b)
%%%

%%%ok added a picture and blendfile (graka gf 550ti, driver: 310.90, blender 2.67b) %%%

%%%Note - I would prefer if each issue was submitted as a separate report since it avoids confusion and means we can discuss each issue on its own without confusion.

Anyway thanks for the blend file - I can see the problem now.

fixed r57371.%%%

%%%Note - I would prefer if each issue was submitted as a separate report since it avoids confusion and means we can discuss each issue on its own without confusion. Anyway thanks for the blend file - I can see the problem now. fixed r57371.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35669
No description provided.