fix [#35669] Snap curvepoints dont work correct when another object is selected

Ctrl+Click extrude curves now supports snapping to faces as with meshes.